--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -18,6 +18,7 @@
                   <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_request_list) %></h2></td>
                   <td id="topButtonRow" class="pbButton">
                     <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
+                    <div class="button"><%= link_to t(:label_icm_incident_request_assign_me), {:action => "edit_assign_me"}%></div>
                     <div class="button"><%= link_to t(:label_action_assign_dashboard), {:action => "assign_dashboard"}%></div>
                     <div class="button" id="incidentRequestExport"><a href="javascript:void(0)"><%= t(:export) %></a></div>
                   </td>
