--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -54,14 +54,14 @@
               <td class="labelCol"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_target_system)%></label></td>
               <td class="dataCol">
                 <% if allow_to_function?(:create_icdt_rqst_for_other) %>
-                    <%=f.select :external_system_code,nullable_options_for_select([],nil),{},
+                    <%=f.select :external_system_id,nullable_options_for_select([],nil),{},
                             {:id=>"ass_external_system",
                              :depend=>"incident_request_requested_by",
                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_external_systems",:format=>"json",:requested_by=>"{incident_request_requested_by}")}%>
                 <% else %>
-                    <%=f.select :external_system_code,
-                            nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.external_system_code]},nil),
+                    <%=f.select :external_system_id,
+                            nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.external_system_id]},nil),
                             {},
                             {:id=>"ass_external_system",
                              :depend=>"incident_request_requested_by",
@@ -82,7 +82,7 @@
                                              :depend=>"ass_external_system,incident_request_requested_by",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_slm_services",:format=>"json",
-                                                            :external_system_code=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}")}%>
+                                                            :external_system_id=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}")}%>
               </td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
