--- a/app/views/slm/service_catalogs/_new_form.html.erb
+++ b/app/views/slm/service_catalogs/_new_form.html.erb
@@ -70,8 +70,8 @@
               <td class="labelCol"><label><%=(t :label_slm_service_catalog_service_owner)%></label></td>
               <td class="dataCol"><%=f.select :service_owner_id,available_service_owner,{},{:required=>true}%></td>
               <td class="labelCol"><label><%=(t :label_slm_service_catalog_external_system_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :external_system_code,options_from_collection_for_select(available_external_systems,:external_system_code,:wrap_system_name),
-                                                    {},{:id=>"external_system_code",:required=>true}%></td>
+              <td class="dataCol"><%=f.blank_select :external_system_id,options_from_collection_for_select(available_external_systems,:id,:wrap_system_name),
+                                                    {},{:id=>"external_system_id",:required=>true}%></td>
             </tr>
 
             <tr>
