--- a/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/app/views/icm/incident_requests/_edit_form.html.erb
@@ -54,16 +54,16 @@
               <td class="labelCol"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_target_system)%></label></td>
               <td class="dataCol">
                 <% if allow_to_function?(:create_icdt_rqst_for_other) %>
-                    <%=f.select :external_system_code,
-                                nullable_options_for_select(available_external_systems_with_person(@incident_request.requested_by).collect{|p| [p[:system_name], p.external_system_code]},@incident_request.external_system_code),{},
+                    <%=f.select :external_system_id,
+                                nullable_options_for_select(available_external_systems_with_person(@incident_request.requested_by).collect{|p| [p[:system_name], p.id]},@incident_request.external_system_id),{},
                             {:id=>"ass_external_system",
                              :depend=>"incident_request_requested_by",
                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_external_systems",:format=>"json",:requested_by=>"{incident_request_requested_by}"),
                              :required => true}%>
                 <% else %>
-                    <%=f.select :external_system_code,
-                            nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.external_system_code]},nil),
+                    <%=f.select :external_system_id,
+                            nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.id]},nil),
                             {},
                             {:id=>"ass_external_system",
                              :depend=>"incident_request_requested_by",
@@ -79,13 +79,13 @@
             <tr>
               <td class="labelCol"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_service_code)%></label></td>
               <td class="dataCol"><%=f.select :service_code,
-                                            nullable_options_for_select(available_service(@incident_request.external_system_code),@incident_request.service_code),
+                                            nullable_options_for_select(available_service(@incident_request.external_system_id),@incident_request.service_code),
                                             {},
                                             {:id=>"incident_request_service_code",
                                              :depend=>"ass_external_system,incident_request_requested_by",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_slm_services",:format=>"json",
-                                                            :external_system_code=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}"),
+                                                            :external_system_id=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}"),
                                              :required => true}%>
               </td>
               <td class="labelCol empty">&nbsp;</td>
@@ -183,10 +183,10 @@
                                                     {},{:id=>"incident_request_support_group_id"}%>
               </td>
               <td class="labelCol"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:support_person_id,available_supporter(@incident_request.support_group_id||0),{},
+              <td class="dataCol"><%= f.blank_select(:support_person_id,[],{},
                                   {
                                    :id=>"incident_request_support_person_id",
-                                   :href=>url_for(:controller=>"group_members",:action=>"get_options",:format=>"json",:group_id=>"{incident_request_support_group_id}"),
+                                   :href=>url_for(),
                                    :depend=>"incident_request_support_group_id"
                                    }) %></td>
 
