--- a/app/views/irm/profiles/show.html.erb
+++ b/app/views/irm/profiles/show.html.erb
@@ -65,9 +65,9 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-        <% gfs = grouped_functions %>
-        <% fzs = function_zones %>
         <% pfids = @profile.function_ids %>
+        <% gfs = grouped_functions(pfids) %>
+        <% fzs = function_zones %>
         <% fzs.each do |zone|%>
           <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
           <% tr_count = 2%>
