--- a/app/views/irm/bulletins/_new_form.html.erb
+++ b/app/views/irm/bulletins/_new_form.html.erb
@@ -105,7 +105,7 @@
       <table cellpadding="0" cellspacing="0" border="0">
         <thead>
           <tr>
-            <th width="20%"></th>
+            <th width="5%"></th>
             <th width="40px"></th>
             <th><%= t :label_skm_file_name %></th>
             <th><%= t :label_skm_file_category %></th>
@@ -118,35 +118,35 @@
               <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
               <td class="dataCol"><%=file_field_tag "file[0][file]"%></td>
               <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%></td>
+              <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
             </tr>
             <tr id="file_1">
               <td class="dataCol"></td>
               <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(1);"} %></td>
               <td class="dataCol"><%=file_field_tag "file[1][file]"%></td>
               <td class="dataCol"><%=select_tag "file[1][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%></td>
+              <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
             </tr>
             <tr id="file_2">
               <td class="dataCol"></td>
               <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(2);"} %></td>
               <td class="dataCol"><%=file_field_tag "file[2][file]"%></td>
               <td class="dataCol"><%=select_tag "file[2][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%></td>
+              <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
             </tr>
             <tr id="file_3">
               <td class="dataCol"></td>
               <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(3);"} %></td>
               <td class="dataCol"><%=file_field_tag "file[3][file]"%></td>
               <td class="dataCol"><%=select_tag "file[3][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%></td>
+              <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
             </tr>
             <tr id="file_4">
               <td class="dataCol"></td>
               <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(4);"} %></td>
               <td class="dataCol"><%=file_field_tag "file[4][file]"%></td>
               <td class="dataCol"><%=select_tag "file[4][file_category]", options_for_select(available_file_categories)%></td>
-              <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%></td>
+              <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
             </tr>
         </tbody>
         <tbody>
@@ -317,7 +317,7 @@ Ext.onReady(function() {
                   + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
                   + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
                   + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= options_for_select(available_file_categories).gsub!(/\n+/, "")%>' + '</select></td>'
-                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35"></td>'
+                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
                   + '</tr>');
           Y.one("#file_body").appendChild(node);
       });
