--- a/app/views/skm/entry_headers/new_step_3.html.erb
+++ b/app/views/skm/entry_headers/new_step_3.html.erb
@@ -14,6 +14,8 @@
         </h2>
     </div>
   <div class="pbBody">
+    <%= error_for @entry_header%>
+    <%= flash_notice %>
     <div class="pbDescription ">
       <%= t(:notice_skm_entry_step_3_desc) %>      
     </div>
@@ -24,7 +26,7 @@
               <table cellpadding="0" cellspacing="0" border="0">
                 <thead>
                   <tr>
-                    <th width="20%"></th>
+                    <th width="5%"></th>
                     <th width="40px"></th>
                     <th><%= t :label_skm_file_name %></th>
                     <th><%= t :label_skm_file_category %></th>
@@ -40,37 +42,36 @@
                       <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
                       <td class="dataCol"><%=file_field_tag "file[0][file]", :required=>true%></td>
                       <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%></td>
+                      <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
                     </tr>
                     <tr id="file_1">
                       <td class="dataCol"></td>
                       <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(1);"} %></td>
                       <td class="dataCol"><%=file_field_tag "file[1][file]", :required=>true%></td>
                       <td class="dataCol"><%=select_tag "file[1][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%></td>
+                      <td class="dataCol"><%=text_field_tag "file[1][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
                     </tr>
                     <tr id="file_2">
                       <td class="dataCol"></td>
                       <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(2);"} %></td>
                       <td class="dataCol"><%=file_field_tag "file[2][file]", :required=>true%></td>
                       <td class="dataCol"><%=select_tag "file[2][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%></td>
+                      <td class="dataCol"><%=text_field_tag "file[2][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
                     </tr>
                     <tr id="file_3">
                       <td class="dataCol"></td>
                       <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(3);"} %></td>
                       <td class="dataCol"><%=file_field_tag "file[3][file]", :required=>true%></td>
                       <td class="dataCol"><%=select_tag "file[3][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%></td>
+                      <td class="dataCol"><%=text_field_tag "file[3][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
                     </tr>
                     <tr id="file_4">
                       <td class="dataCol"></td>
                       <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(4);"} %></td>
                       <td class="dataCol"><%=file_field_tag "file[4][file]", :required=>true%></td>
                       <td class="dataCol"><%=select_tag "file[4][file_category]", options_for_select(available_file_categories)%></td>
-                      <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%></td>
+                      <td class="dataCol"><%=text_field_tag "file[4][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
                     </tr>
-                </tbody>
                 <tbody>
                     <tr>
                       <td class="dataCol"></td>
@@ -147,7 +148,7 @@
                   + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
                   + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
                   + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= options_for_select(available_file_categories).gsub!(/\n+/, "")%>' + '</select></td>'
-                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35"></td>'
+                  + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
                   + '</tr>');
           Y.one("#file_body").appendChild(node);
       });
