--- a/app/views/skm/file_managements/batch_new.html.erb
+++ b/app/views/skm/file_managements/batch_new.html.erb
@@ -16,7 +16,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @files%>
+    <%= flash_notice%>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <h3><%= t(:label_skm_upload_batch_file) %></h3>
     </div>
