--- a/app/views/skm/file_managements/_new_form.html.erb
+++ b/app/views/skm/file_managements/_new_form.html.erb
@@ -16,7 +16,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @files%>
+    <%= flash_notice %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
