添加页面标题

--- a/app/views/csi/survey_subjects/_edit_form.html.erb
+++ b/app/views/csi/survey_subjects/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(@survey_sububject.class.name) %>
 <div id="edit_form">
 <%= form_for(@survey_subject,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <%= hidden_field_tag :survey_id,@survey_id %>
