--- a/app/views/csi/surveys/_edit_form.html.erb
+++ b/app/views/csi/surveys/_edit_form.html.erb
@@ -1,4 +1,5 @@
-<%= app_title %>
+<%= common_title(@survey.class.name,"",@survey.title) %>
+
 
 <%= form_for(@survey,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
