--- a/app/views/csi/surveys/index.html.erb
+++ b/app/views/csi/surveys/index.html.erb
@@ -1,4 +1,5 @@
-<%= app_title %>
+<%= common_title(Csi::Survey) %>
+
 <%= view_filter("CSI_SURVEYS_INDEX","CSI_SURVEYS","survey") %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
