--- a/app/views/icm/close_reasons/show.html.erb
+++ b/app/views/icm/close_reasons/show.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(@close_reason.class.name,"",@close_reason[:name]) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
