--- a/app/views/icm/impact_ranges/show.html.erb
+++ b/app/views/icm/impact_ranges/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title(:show_data => @impact_range.impact_code) %>
+<%= common_title(Icm::ImpactRange.name,"",@impact_range[:name]) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
