--- a/app/views/icm/incident_requests/assign_dashboard.html.erb
+++ b/app/views/icm/incident_requests/assign_dashboard.html.erb
@@ -1,4 +1,4 @@
-<%= app_title %>
+<%= common_title(Icm::IncidentRequest.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
