--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -20,7 +20,7 @@
     text-align: right;
   }
 </style>
-<%= setting_title %>
+<%= common_title(Icm::IncidentStatus.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
