--- a/app/views/icm/priority_codes/multilingual_edit.html.erb
+++ b/app/views/icm/priority_codes/multilingual_edit.html.erb
@@ -1,3 +1,4 @@
+<%= common_title(Icm::PriorityCode.name) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@priority_code} %>
 </div>
