--- a/app/views/icm/rule_settings/show.html.erb
+++ b/app/views/icm/rule_settings/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title(:show_data => I18n.t(:show)) %>
+<%= common_title(@rule_setting.class.name) %>
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
