--- a/app/views/icm/support_groups/index.html.erb
+++ b/app/views/icm/support_groups/index.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(Icm::SupportGroup.name) %>
 <% if @group %>
     <%= render :partial => "support_group_index" %>
 <% else %>
