--- a/app/views/irm/applications/index.html.erb
+++ b/app/views/irm/applications/index.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(Irm::Application.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
