--- a/app/views/irm/applications/show.html.erb
+++ b/app/views/irm/applications/show.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(@application.class.name,"",@application[:name]) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
