--- a/app/views/irm/cards/show.html.erb
+++ b/app/views/irm/cards/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title(:show_data => @card[:name]) %>
+<%= common_title(@card.class.name,"",@card[:name]) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
