--- a/app/views/csi/surveys/reply.html.erb
+++ b/app/views/csi/surveys/reply.html.erb
@@ -1,3 +1,5 @@
+<%= common_title(Csi::Survey,t(:reply),@survey.title) %>
+
 <div class="lightBlue">
     <div class="bPageTitle">
         <div class="secondaryPalette" style="background-color:#1797C0;">
