--- a/app/views/csi/surveys/show.html.erb
+++ b/app/views/csi/surveys/show.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag "/javascripts/yui3.3/datatable/assets/skins/sam/datatable.css"%>
 <%= app_show_title(:show_data => @survey.title) %>
-
+<%= common_title(Csi::Survey,"",@survey.title) %>
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
