--- a/app/views/icm/close_reasons/_edit_form.html.erb
+++ b/app/views/icm/close_reasons/_edit_form.html.erb
@@ -1,5 +1,4 @@
-<%= page_title %>
-
+<%= common_title(@close_reason.class.name,"",@close_reason[:name]) %>
 <%= form_for(@close_reason,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
