--- a/app/views/icm/close_reasons/index.html.erb
+++ b/app/views/icm/close_reasons/index.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(Icm::CloseReason.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
