--- a/app/views/icm/close_reasons/multilingual_edit.html.erb
+++ b/app/views/icm/close_reasons/multilingual_edit.html.erb
@@ -1,3 +1,5 @@
+<%= common_title(@close_reason.class.name,"",@close_reason[:name]) %>
+
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@close_reason} %>
 </div>
