--- a/app/views/icm/impact_ranges/index.html.erb
+++ b/app/views/icm/impact_ranges/index.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(Icm::ImpactRange.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
