--- a/app/views/icm/impact_ranges/multilingual_edit.html.erb
+++ b/app/views/icm/impact_ranges/multilingual_edit.html.erb
@@ -1,3 +1,4 @@
+<%= common_title(Icm::ImpactRange.name,"",@impact_range[:name]) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@impact_range} %>
 </div>
