--- a/app/views/icm/incident_journals/edit_status.html.erb
+++ b/app/views/icm/incident_journals/edit_status.html.erb
@@ -53,7 +53,7 @@
     vertical-align: top;
   }
 </style>
-<%= page_title %>
+<%= common_title(Icm::IncidentRequest.name,t(:label_icm_incident_request_incident_status)) %>
 <%= form_for(@incident_request,:url=>{:action=>"update_status"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
 <div id="reply" class="bEditBlock bPageBlock">
   <div class="pbHeader">
