--- a/app/views/icm/incident_journals/new.html.erb
+++ b/app/views/icm/incident_journals/new.html.erb
@@ -1,3 +1,3 @@
-<%= page_title("",t(:label_icm_reply)) %>
+<%= common_title(Icm::IncidentRequest.name,t(:label_icm_reply),@incident_request.title) %>
 <%= render 'new_form'%>
 <%= approval_history(@incident_request.id,Icm::IncidentRequest.name) %>
