--- a/app/views/icm/incident_phases/multilingual_edit.html.erb
+++ b/app/views/icm/incident_phases/multilingual_edit.html.erb
@@ -1,3 +1,4 @@
+<%= common_title(Icm::IncidentPhase.name) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@incident_phase} %>
 </div>
