--- a/app/views/icm/incident_phases/show.html.erb
+++ b/app/views/icm/incident_phases/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title(:show_data => @incident_phase[:name]) %>
+<%= common_title(@incident_phase.class.name,"",@incident_phase[:name]) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
