--- a/app/views/icm/incident_requests/edit_assign_me.html.erb
+++ b/app/views/icm/incident_requests/edit_assign_me.html.erb
@@ -1,4 +1,4 @@
-<%= app_title %>
+<%= common_title(Icm::IncidentRequest.name,t(:label_icm_incident_request_assign_me)) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
