--- a/app/views/icm/incident_statuses/_edit_form.html.erb
+++ b/app/views/icm/incident_statuses/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@incident_status.class.name,"",@incident_status[:name]) %>
 
 <%= form_for(@incident_status,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
