--- a/app/views/icm/incident_statuses/_new_form.html.erb
+++ b/app/views/icm/incident_statuses/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@incident_status.class.name) %>
 
 <%= form_for(@incident_status,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
