--- a/app/views/icm/incident_statuses/multilingual_edit.html.erb
+++ b/app/views/icm/incident_statuses/multilingual_edit.html.erb
@@ -1,3 +1,5 @@
+<%= common_title(Icm::IncidentStatus.name) %>
+
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@incident_status} %>
 </div>
