--- a/app/views/icm/priority_codes/_new_form.html.erb
+++ b/app/views/icm/priority_codes/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@priority_code.class.name,"",@priority_code[:name]) %>
 <%= form_for(@priority_code,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
