--- a/app/views/icm/priority_codes/index.html.erb
+++ b/app/views/icm/priority_codes/index.html.erb
@@ -1,4 +1,3 @@
-<%= setting_title %>
 <style type="text/css">
   table.matrix{
     padding-left: 20px;
@@ -21,7 +20,7 @@
     text-align: right;
   }
 </style>
-<%= setting_title %>
+<%= common_title(Icm::PriorityCode.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
