--- a/app/views/icm/priority_codes/show.html.erb
+++ b/app/views/icm/priority_codes/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title(:show_data =>  @priority_code.priority_code) %>
+<%= common_title(@priority_code.class.name,"",@priority_code[:name]) %>
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
