--- a/app/views/icm/rule_settings/_new_form.html.erb
+++ b/app/views/icm/rule_settings/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@rule_setting.class.name) %>
 <%= form_for(@rule_setting,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
