--- a/app/views/icm/urgence_codes/multilingual_edit.html.erb
+++ b/app/views/icm/urgence_codes/multilingual_edit.html.erb
@@ -1,3 +1,4 @@
+<%= common_title(@urgence_code.class.name,"",@urgence_code[:name]) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@urgence_code} %>
 </div>
