--- a/app/views/icm/urgence_codes/show.html.erb
+++ b/app/views/icm/urgence_codes/show.html.erb
@@ -1,4 +1,4 @@
-<%= setting_show_title(:show_data => @urgence_code.urgency_code) %>
+<%= common_title(@urgence_code.class.name,"",@urgence_code[:name]) %>
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
