--- a/app/views/irm/applications/multilingual_edit.html.erb
+++ b/app/views/irm/applications/multilingual_edit.html.erb
@@ -1,3 +1,4 @@
+<%= common_title(@application.class.name,"",@application[:name]) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@application} %>
 </div>
