--- a/app/views/irm/bu_columns/index.html.erb
+++ b/app/views/irm/bu_columns/index.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(Irm::BuColumn.name) %>
 <script type="text/javascript" src="/javascripts/ext4-all.js"></script>
 <link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
 
