--- a/app/views/irm/bu_columns/new.html.erb
+++ b/app/views/irm/bu_columns/new.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@bu_column.class.name,"",@bu_column[:name]) %>
 <%= form_for(@bu_column,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
