--- a/app/views/irm/bulletins/index.html.erb
+++ b/app/views/irm/bulletins/index.html.erb
@@ -1,4 +1,4 @@
-<%= app_title %>
+<%= common_title(Irm::Bulletin.name)%>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
