--- a/app/views/irm/business_objects/show.html.erb
+++ b/app/views/irm/business_objects/show.html.erb
@@ -1,4 +1,4 @@
-<%= page_title %>
+<%= common_title(@business_object.class.name,"",@business_object[:name]) %>
 
 <div id="ep" class="bDetailBlock bPageBlock">
   <div class="pbHeader">
