--- a/app/views/irm/cards/edit.html.erb
+++ b/app/views/irm/cards/edit.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@card.class.name,"",@card[:name]) %>
 <%= form_for(@card,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
