--- a/app/views/irm/cards/multilingual_edit.html.erb
+++ b/app/views/irm/cards/multilingual_edit.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(@card.class.name,"",@card[:name]) %>
 <div class="container">
    <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@card} %>
 </div>
