--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(Irm::Person.name,"",@person[:person_name]) %>
 <%= form_for(@person,:url=>{:action=>"update"},:as=>"irm_person",:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
