--- a/app/views/irm/people/index.html.erb
+++ b/app/views/irm/people/index.html.erb
@@ -1,4 +1,4 @@
-<%= app_title %>
+<%= common_title(Irm::Person.name) %>
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
       <div class="pbHeader">
