附件上传大小限制一直在生效，但是当上传附件超过设置最大限制时，上传失败却不会返回任务报错信息。 头像上传因为上传后还要截图，然后经过PAPERCLIP截取，所以没有进行大小控制。
在以下页面已经添加附件超过限制大小时，返回报错信息，并且不保存数据：
1.事故单编辑、新建页面
2.事故单回复界面
3.公告新建、编辑页面
4.知识库创建过程第三步

--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -25,6 +25,7 @@
   </div>
   <div class="pbBody">
     <%= error_for @incident_request %>
+    <%= flash_notice %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
