--- a/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/app/views/icm/incident_requests/_edit_form.html.erb
@@ -8,7 +8,7 @@
     padding-left: 1px;
   }
 </style>
-<%= form_for(@incident_request,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@incident_request,:url=>{:action=>"update"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -106,6 +106,9 @@
               <td class="labelCol"></td>
               <td class="dataCol" colspan="3" style="width:82%">
                 <table width="80%">
+                    <tbody id="exist_attachments_list">
+                        <%= list_ir_existed_attachments(@incident_request)%>
+                    </tbody>
                   <tbody id="fileTemplate" style="display:none" seq="0">
                   <tr id="file_{seq}" class="fileArea">
                       <td><input type="file" name="{ref}[{seq}][file]"/></td>
@@ -310,5 +313,19 @@ GY.use('irm','node','substitute','yui2-editor', function(Y) {
     Y.all(".edit_icm_incident_request input[type=submit]").on("click",function(){
       editor.saveHTML();
     });
+
+    Y.one("#fileButtons #addButton").on('click',function(){
+      var templateContainer = Y.one("#fileTemplate");
+      var seq = templateContainer.getAttribute("seq");
+      templateContainer.setAttribute("seq",parseInt(seq)+1);
+      var template = templateContainer.getContent();
+      var row =  Y.Lang.substitute(template,{seq:seq,ref:"files"});
+      Y.one("#fileContent").appendChild(row);
+    });
+    Y.one("#fileContent").delegate("click",function(e){
+        Y.log(this.getAttribute("delete_ref"));
+        Y.one("#"+this.getAttribute("delete_ref")).remove();
+    },'.deleteAttach') ;
+    Y.one("#incident_request_contact_id").simulate("change");
 });
 </script>
