--- a/app/views/irm/bulletins/_edit_form.html.erb
+++ b/app/views/irm/bulletins/_edit_form.html.erb
@@ -29,6 +29,7 @@
   </div>
   <div class="pbBody">
     <%= error_for @bulletin%>
+    <%= flash_notice %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <span class="pbSubExtra">
         <span class="requiredLegend">
