附件上传大小限制一直在生效，但是当上传附件超过设置最大限制时，上传失败却不会返回任务报错信息。 头像上传因为上传后还要截图，然后经过PAPERCLIP截取，所以没有进行大小控制。
在以下页面已经添加附件超过限制大小时，返回报错信息，并且不保存数据：
1.事故单编辑、新建页面
2.事故单回复界面
3.公告新建、编辑页面
4.知识库创建过程第三步

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -127,6 +127,7 @@
 
   <div class="pbBody">
     <%= error_for @incident_journal%>
+    <%= flash_notice %>
     <div class="pbSubheader tertiaryPalette first" style="background-color:#aeaeae;padding-left:15px;">
       <h3>(<%= @incident_request[:incident_status_name] %>)[<%=@incident_request[:request_number]%>]<%=@incident_request[:title]%></h3>
       <div style="margin-left: 15px; display:inline;">(<a href="javascript:void(0)" id="showMore"><%= t(:label_icm_incident_more_info) %></a>)</div>
