--- a/app/views/irm/my_avatar/edit.html.erb
+++ b/app/views/irm/my_avatar/edit.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(:model_meaning=>t(:label_irm_person_avatar)) %>
 <%= form_for(@person,:url=>{:action=>"update", :controller => "irm/my_avatar", :id => @person.id}, :html => {:multipart => true}, :builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
