--- a/app/views/irm/my_info/edit.html.erb
+++ b/app/views/irm/my_info/edit.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(:model_meaning=>t(:label_irm_person_info)) %>
 <%= form_for(@person,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
