--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -1,4 +1,5 @@
-<%= page_title %>
+<%= common_title(:model_meaning=>t(:label_irm_person_info)) %>
+
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
