--- a/app/views/irm/my_login_history/index.html.erb
+++ b/app/views/irm/my_login_history/index.html.erb
@@ -1,4 +1,4 @@
-<%= setting_title %>
+<%= common_title(:model_meaning=>t(:label_irm_login_record_list)) %>
 
 <div class="listRelatedObject setupBlock">
     <div class="bPageBlock">
