--- a/app/views/irm/my_password/edit_password.html.erb
+++ b/app/views/irm/my_password/edit_password.html.erb
@@ -1,4 +1,4 @@
-<%= page_title("",t(:edit_password)) %>
+<%= common_title(:model_meaning=>t(:label_irm_person_info),:show_data=>t(:edit_password)) %>
 <%= form_for(@person,:url=>{:action=>"update_password"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
