--- a/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -22,7 +22,8 @@
                                { :key => "incident_status_name",:hidden=>true },
                                { :key => "need_customer_reply",:hidden=>true },
                                { :key => "requested_name", :label => t(:label_icm_incident_request_requested_by,:searchable=>true) },
-                               { :key => "last_request_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" }
+                               { :key => "last_request_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" },
+                               { :key => "external_system_name", :label => t(:label_irm_external_system),:width=>"180px" }
                                ],{:export_data=>"#incidentRequestExport",:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox'})%>
         <div id="incidentRequestsPaginatorBox"></div>
 </div>
